Initial about page

--- a/apps/dreams-app/src/app/layout/layout.component.html
+++ b/apps/dreams-app/src/app/layout/layout.component.html
@@ -1,4 +1,5 @@
 <dreams-header></dreams-header>
-<p>layout works!</p>
-<router-outlet></router-outlet>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
 <dreams-footer></dreams-footer>
