--- a/apps/dreams-app/src/app/templates/header/header.component.html
+++ b/apps/dreams-app/src/app/templates/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<Header>
+    <div class="content">
+        <a
+                  class="nav-link"
+                  routerLink="/home"
+                  ><div class="logo"><h1>Dreams</h1></div></a
+                >
+        
+        <ul>
+            <li class="nav-item">
+                <a
+                  class="nav-link"
+                  routerLink="/about"
+                  >About</a
+                >
+              </li>
+        </ul>
+    </div> 
+</Header>
