Added entities to about page

--- a/apps/dreams-app/src/app/pages/about/about.component.html
+++ b/apps/dreams-app/src/app/pages/about/about.component.html
@@ -72,12 +72,25 @@
         </ul>
     </div>
     <div class="col-sm-12 col-md-4">
-        <p>Entiteit 3</p>
+        <p>Post</p>
         <ul>
-            <li>naam: string</li>
-            <li>id: number</li>
-            <li>birthdate: date</li>
-            <li>isSelected: boolean</li>
+            <li>id: string</li>
+            <li>titel: string</li>
+            <li>img: blob</li>
+            <li>vid: blob</li>
+            <li>context: string</li>
+            <li>readAvailability: int</li>
+            <li>tag: tags -> name: string, color: string</li>
+            <li>Poster: User OR Organisation</li>
+        </ul>
+    </div>
+    <div class="col-sm-12 col-md-4">
+        <p>Reaction</p>
+        <ul>
+            <li>id: string</li>
+            <li>vote: boolean</li>
+            <li>context: string</li>
+            <li>reactiondate: date</li>
         </ul>
     </div>
 </div>
