--- a/apps/dreams-app/src/app/pages/about/about.component.html
+++ b/apps/dreams-app/src/app/pages/about/about.component.html
@@ -109,29 +109,27 @@
                 <th class="col-6">Userstory</th>
                 <th>Evt toelichting</th>
             </thead>
-            <tbody>
+            <tbody class="forceHeight">
                 <tr>
                     <td>1</td>
                     <td>
-                        Als gebruiker wil ik een overzicht van movies kunnen
-                        raadplegen, zodat ik kan zien welke movies op dit moment
-                        beschikbaar zijn.
+                        Als gebruiker wil ik een overzicht van posts kunnen
+                        raadplegen, zodat ik kan zien wat andere gebruikers hulp bij nodig hebben.
                     </td>
-                    <td>Overzicht is een grid.</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>
-                        Als ingelogde gebruiker wil ik zelf een movie kunnen
-                        toevoegen, zodat ik mijn movies in het systeem kan
-                        invoeren.
+                        Als ingelogde gebruiker of ingelogde organisatie wil ik zelf een post kunnen
+                        toevoegen, zodat ik hulp kan krijgen van andere gebruikers.
                     </td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>
-                        Als ingelogde gebruiker wil ik mijn eigen movies kunnen
+                        Als ingelogde gebruiker of ingelogde organisatie wil ik mijn eigen posts kunnen
                         bewerken en verwijderen, zodat ik mijn informatie
                         up-to-date kan houden.
                     </td>
@@ -140,7 +138,62 @@
                 <tr>
                     <td>4</td>
                     <td>
-                        <p>Voeg zelf meer userstories toe.</p>
+                        <p>Als ingelogde gebruiker of ingelogde organisatie wil ik een reactie toe kunnen voegen aan een post
+                            zodat ik andere gebruikers kan helpen
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>
+                        <p>Als ingelogde gebruike of ingelogde organisatier wil ik mijn reacties kunnen verwijderen of aanpassen
+                            zodat ik mijn informatie up-to-date kan houden. 
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>
+                        <p>Als ingelogde gebruiker wil ik een organisatie aan kunnen maken
+                            zodat ik posts kan beheren met meerdere gebruikers. 
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>
+                        <p>Als ingelogde gebruiker wil ik mijn organisaties kunnen bekijken
+                            zodat ik weet in welke organisaties ik zit. 
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>
+                        <p>Als organisatie eigenaar wil ik een organisatie kunnen bewerken en verwijderen
+                            zodat ik mijn informatie up-to-date kan houden. 
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>
+                        <p>Als organisatie eigenaar wil ik een organisatie kunnen bewerken en verwijderen
+                            zodat ik mijn informatie up-to-date kan houden. 
+                        </p>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>
+                        <p>Als ingelogde gebruiker wil ik in kunnen loggen op een organisatie waar ik lid van ben
+                        zodat ik posts en reacties kan beheren van de organisatie</p>
                     </td>
                     <td></td>
                 </tr>
