--- a/apps/dreams-app/src/app/pages/home/home.component.html
+++ b/apps/dreams-app/src/app/pages/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<table class="table table-striped table-hover">
+    <thead>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{ user.id }}</td>
+        <td>
+          <a routerLink="{{ user.id }}">
+            {{ user.firstName }} {{ user.lastName }}</a
+          >
+        </td>
+        <td>{{ user.emailAdress }}</td>
+      </tr>
+    </tbody>
+</table>
