Added basic post read functionality

--- a/apps/dreams-app/src/app/pages/home/home.component.html
+++ b/apps/dreams-app/src/app/pages/home/home.component.html
@@ -16,3 +16,24 @@
       </tr>
     </tbody>
 </table>
+<div class="divider"></div>
+<table class="table table-striped table-hover">
+  <thead>
+    <th>Id</th>
+    <th>Title</th>
+    <th>Content</th>
+    <th>User name</th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let post of posts">
+      <td>{{ post.id }}</td>
+      <td>
+        <a routerLink="{{ post.id }}">
+          {{ post.titel }}</a
+        >
+      </td>
+      <td style="max-width: 500px;">{{ post.content }}</td>
+      <td>{{ post.user.firstName }} {{ post.user.lastName }}</td>
+    </tr>
+  </tbody>
+</table>
