--- a/apps/dreams-app/src/app/layout/layout.component.html
+++ b/apps/dreams-app/src/app/layout/layout.component.html
@@ -1,5 +1,12 @@
 <dreams-header></dreams-header>
-<div class="content">
-    <router-outlet></router-outlet>
-</div>
+<main>
+    <!-- <div class="dreamBubbles">
+        <div class="bubble" id="bubble1"></div>
+        <div class="bubble" id="bubble2"></div>
+        <div class="bubble" id="bubble3"></div>
+    </div> -->
+    <div class="content">
+        <router-outlet></router-outlet>
+    </div>
+</main>
 <dreams-footer></dreams-footer>
