--- a/apps/dreams-app/src/app/pages/about/about.component.html
+++ b/apps/dreams-app/src/app/pages/about/about.component.html
@@ -20,7 +20,7 @@
             >
                 <!-- Je mag een foto van jezelf toevoegen, maar dat is niet verplicht. -->
                 <img
-                    src="../assets/images/person.png"
+                    src="assets/images/about/person.png"
                     class="card-img-top rounded-circle border profile-pic px-4 py-4"
                     alt="..."
                 />
@@ -39,7 +39,7 @@
     je model toe zoals dat bij NoSql gevraagd wordt.
 </p>
 
-<img src="assets/images/erd.png" class="px-5 py-5" alt="..." />
+<img src="assets/images/about/erd.png" class="px-5 py-5" alt="..." />
 
 <div class="row">
     <div class="col-sm-12 col-md-4">
