--- a/apps/dreams-app/src/app/templates/header/header.component.html
+++ b/apps/dreams-app/src/app/templates/header/header.component.html
@@ -1,19 +1,18 @@
 <Header>
     <div class="content">
-        <a
-                  class="nav-link"
-                  routerLink="/home"
-                  ><div class="logo"><h1>Dreams</h1></div></a
-                >
-        
+        <a class="nav-link" routerLink="/home">
+          <img src="../assets/images/shared/Dreams.svg" alt="Logo">
+        </a>
         <ul>
             <li class="nav-item">
-                <a
-                  class="nav-link"
-                  routerLink="/about"
-                  >About</a
-                >
-              </li>
+                <a class="nav-link" routerLink="/about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/login">Login</a>
+          </li>
         </ul>
+    </div>
+    <div class="bottomBorder">
+
     </div> 
 </Header>
