--- a/apps/dreams-app/src/app/templates/header/header.component.css
+++ b/apps/dreams-app/src/app/templates/header/header.component.css
@@ -34,10 +34,24 @@ header{
             }
 
     header .bottomBorder{
-        width: 100%;
+        position: relative;
+        width: 200%;
         height: 40px;
+
         background-image: url("../../../assets/images/shared/Bottom.png");
         background-position: bottom center;
         background-size: 500px 40px;
         background-repeat: repeat-x;
+
+        left: -80px;
+        animation-name: shift;
+        animation-duration: 18s;
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
     }
+
+@keyframes shift {
+    0%   {left: -80px;}
+    50%  {left: 0px;}
+    100% {left: -80px;}
+}
