--- a/apps/dreams-app/src/app/templates/footer/footer.component.css
+++ b/apps/dreams-app/src/app/templates/footer/footer.component.css
@@ -1,3 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
 footer{
-    background-color: grey;
+    margin-top: 40px;
+    background-color: #08061C;
+    background-image: url("../../../assets/images/shared/Background.gif");
+    overflow-x: hidden;
+    box-shadow: 0px -4px 10px 0px rgba(0, 0, 0, 0.603);
+}
+footer .topBorder{
+    position: relative;
+    width: 200%;
+    height: 40px;
+    
+    background-image: url("../../../assets/images/shared/Bottom.png");
+    background-position: bottom center;
+    background-size: 500px 40px;
+    background-repeat: repeat-x;
+
+    left: -80px;
+    animation-name: shift;
+    animation-duration: 18s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    transform: rotateX(180deg);
+}
+footer .content p{
+    margin: 0;
+    padding: 20px 0;
+
+    font-family: 'Fredoka One', cursive;
+    color: white !important;
+    font-size: 16px;
 }
