--- a/apps/dreams-app/src/app/templates/header/header.component.html
+++ b/apps/dreams-app/src/app/templates/header/header.component.html
@@ -12,7 +12,5 @@
           </li>
         </ul>
     </div>
-    <div class="bottomBorder">
-
-    </div> 
+    <div class="bottomBorder"></div> 
 </Header>
