styling post overview items

--- a/apps/dreams-app/src/styles.css
+++ b/apps/dreams-app/src/styles.css
@@ -7,3 +7,14 @@
     max-width: 1200px;
     margin: 0 auto;
 }
+
+h1{
+    font-family: 'Fredoka One', cursive;
+}
+
+main a{
+    color: #483d8b;
+}
+main a:hover{
+    color: #241f45;
+}
