--- a/apps/dreams-app/src/app/entity/post/post-templates/post-overview-item/post-overview-item.component.html
+++ b/apps/dreams-app/src/app/entity/post/post-templates/post-overview-item/post-overview-item.component.html
@@ -1,1 +1,6 @@
-jb;oihbvxmdgoulbkvhcjghxfzgndtes676figvkhc gjyjr
+<div class="post">
+    
+    <a class="postUser" href="user/{{ post.user.id }}"><p class="postUser">{{ post.user.firstName }} {{ post.user.lastName }}</p></a>
+    <a href="post/{{ post.id }}"><p class="postTitle">{{ post.titel }}</p></a>
+    
+</div>
