--- a/apps/dreams-app/src/app/pages/home/home.component.html
+++ b/apps/dreams-app/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<table class="table table-striped table-hover">
+<div class="row">
+  <table class="table table-striped table-hover">
     <thead>
       <th>Id</th>
       <th>Name</th>
@@ -17,28 +18,11 @@
         <td><a href="user/{{ user.id }}/edit"><button>Edit user</button></a></td>
       </tr>
     </tbody>
-</table>
-<div class="divider"></div>
-<table class="table table-striped table-hover">
-  <thead>
-    <th>Id</th>
-    <th>Title</th>
-    <th>Content</th>
-    <th>User name</th>
-  </thead>
-  <tbody>
-    <tr *ngFor="let post of posts">
-      <td>{{ post.id }}</td>
-      <td>
-        <a routerLink="post/{{ post.id }}">
-          {{ post.titel }}</a
-        >
-      </td>
-      <td style="max-width: 500px;">{{ post.content }}</td>
-      <td>{{ post.user.firstName }} {{ post.user.lastName }}</td>
-      <!-- <td><a routerLink="post/{{ post.id }}/delete">Delete post</a></td> -->
-      <td><button (click)="deletePost(post.id!)">Delete post</button></td>
-      <td><a href="post/{{ post.id }}/edit"><button>Edit post</button></a></td>
-    </tr>
-  </tbody>
-</table>
+  </table>
+  <div class="divider"></div>
+  <h1>Posts</h1>
+  <div class="posts col-7">
+    <dreams-post-overview-item class="childBackground" *ngFor="let inPost of posts" [post]='inPost'></dreams-post-overview-item>
+  </div>
+</div>
+
