--- a/apps/dreams-app/src/app/pages/home/home.component.html
+++ b/apps/dreams-app/src/app/pages/home/home.component.html
@@ -1,28 +1,10 @@
 <div class="row">
-  <table class="table table-striped table-hover">
-    <thead>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Email</th>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.id }}</td>
-        <td>
-          <a routerLink="{{ user.id }}">
-            {{ user.firstName }} {{ user.lastName }}</a
-          >
-        </td>
-        <td>{{ user.emailAdress }}</td>
-        <td><button (click)="deleteUser(user.id!)">Delete user</button></td>
-        <td><a href="user/{{ user.id }}/edit"><button>Edit user</button></a></td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="divider"></div>
-  <h1>Posts</h1>
+  <div class="row"><h2 class="col-7">Posts</h2><h2 class="col-5">Your companies</h2></div>
   <div class="posts col-7">
     <dreams-post-overview-item class="childBackground" *ngFor="let inPost of posts" [post]='inPost'></dreams-post-overview-item>
+  </div>
+  <div class="companies col-5">
+      <dreams-company-overview-item *ngFor="let company of companies" [company]="company"></dreams-company-overview-item>
   </div>
 </div>
 
