Made dreams-app work again

--- a/apps/dreams-app/src/app/pages/home/home.component.html
+++ b/apps/dreams-app/src/app/pages/home/home.component.html
@@ -1,10 +1,1 @@
-<div class="row">
-  <div class="row"><h2 class="col-7">Posts</h2><h2 class="col-5">Your companies</h2></div>
-  <div class="posts col-7">
-    <dreams-post-overview-item class="childBackground" *ngFor="let inPost of posts" [post]='inPost'></dreams-post-overview-item>
-  </div>
-  <div class="companies col-5">
-      <dreams-company-overview-item *ngFor="let company of companies" [company]="company"></dreams-company-overview-item>
-  </div>
-</div>
-
+<p>home works!</p>
